# RutSeriDB

./: Cargo.toml
docs/: README.md  architecture.md  components.md  phase0_plan.md  phase1_plan.md  tasks.md
docs/cluster/: replication.md  sharding.md
docs/ingestion/: wal.md
docs/storage/: format.md  indexes.md  io_uring.md  tsm.md
src/: lib.rs  main.rs
src/api/: mod.rs  query_handler.rs  server.rs  write_handler.rs
src/background/: index_builder.rs  merge_worker.rs  metrics.rs  mod.rs  wal_cleanup.rs
src/client/: mod.rs  query.rs  types.rs  write.rs
src/common/: error.rs  mod.rs  schema.rs  shard_key.rs  types.rs
src/config/: config.rs  mod.rs
src/coordinator/: cluster_manager.rs  metadata_catalog.rs  mod.rs  query_planner.rs  read_router.rs  write_router.rs
src/gossip/: membership.rs  mod.rs  swim.rs
src/ingest/: engine.rs  mod.rs  shard_actor.rs
src/query/: ast.rs  executor.rs  mod.rs  parser.rs  planner.rs
src/raft/: log.rs  mod.rs  node.rs  state_machine.rs
src/replication/: manager.rs  mod.rs  snapshot.rs
src/rpc/: client.rs  mod.rs  proto.rs  server.rs
src/storage/: mod.rs
src/storage/catalog/: catalog.rs  mod.rs
src/storage/index/: bloom.rs  inverted.rs  minmax.rs  mod.rs
src/storage/memtable/: memtable.rs  mod.rs
src/storage/part/: encoding.rs  format.rs  mod.rs  reader.rs  writer.rs
src/storage/wal/: entry.rs  mod.rs  reader.rs  writer.rs
